--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,9 @@
-name: Build Android APK (Java)
+name: Build Cordova Debug APK
 
 on:
   push:
+    branches: [ "main" ]
+  pull_request:
     branches: [ "main" ]
   workflow_dispatch:
 
@@ -10,22 +12,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 17
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: Install Gradle
-        run: sudo apt-get update && sudo apt-get install -y gradle
+    - name: Install Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
 
-      - name: Build Debug APK
-        run: gradle assembleDebug
+    - name: Install Cordova
+      run: npm install -g cordova
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: FunTargetAPK
-          path: app/build/outputs/apk/debug/app-debug.apk
+    # अगर android folder पहले से मौजूद है
+    - name: Build Debug APK
+      run: |
+        cd android
+        chmod +x gradlew
+        ./gradlew assembleDebug
+
+    # APK upload
+    - name: Upload Debug APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: debug-apk
+        path: android/app/build/outputs/apk/debug/app-debug.apk
