--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,8 +3,6 @@ name: Build Cordova Debug APK
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -12,16 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout repo
       uses: actions/checkout@v4
 
-    - name: Set up JDK 17
+    - name: Setup JDK 17
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
         java-version: '17'
 
-    - name: Install Node.js
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
@@ -29,16 +27,14 @@ jobs:
     - name: Install Cordova
       run: npm install -g cordova
 
-    # अगर android folder पहले से मौजूद है
-    - name: Build Debug APK
-      run: |
-        cd android
-        chmod +x gradlew
-        ./gradlew assembleDebug
+    - name: Add Android Platform
+      run: cordova platform add android
 
-    # APK upload
-    - name: Upload Debug APK
+    - name: Build Debug APK
+      run: cordova build android
+
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: debug-apk
-        path: android/app/build/outputs/apk/debug/app-debug.apk
+        path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
