--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,14 +27,21 @@ jobs:
     - name: Install Cordova
       run: npm install -g cordova
 
+    - name: Go to Cordova Project
+      run: cd FunTargetAPK
+
     - name: Add Android Platform
-      run: cordova platform add android
+      run: |
+        cd FunTargetAPK
+        cordova platform add android
 
     - name: Build Debug APK
-      run: cordova build android
+      run: |
+        cd FunTargetAPK
+        cordova build android
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: debug-apk
-        path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
+        path: FunTargetAPK/platforms/android/app/build/outputs/apk/debug/app-debug.apk
