--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Build Cordova Debug APK
+name: Build Java Android APK
 
 on:
   push:
@@ -10,38 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Setup JDK 17
       uses: actions/setup-java@v3
       with:
-        distribution: 'temurin'
-        java-version: '17'
+        distribution: temurin
+        java-version: 17
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-
-    - name: Install Cordova
-      run: npm install -g cordova
-
-    - name: Go to Cordova Project
-      run: cd FunTargetAPK
-
-    - name: Add Android Platform
+    - name: Build APK
       run: |
-        cd FunTargetAPK
-        cordova platform add android
-
-    - name: Build Debug APK
-      run: |
-        cd FunTargetAPK
-        cordova build android
+        chmod +x gradlew
+        ./gradlew assembleDebug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: debug-apk
-        path: FunTargetAPK/platforms/android/app/build/outputs/apk/debug/app-debug.apk
+        path: app/build/outputs/apk/debug/app-debug.apk
