--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,46 @@
-name: Build APK
-on: [push]
+name: Build Cordova APK
+
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+
 jobs:
- build:
-  runs-on: ubuntu-latest
-  steps:
-  - uses: actions/checkout@v4
-  - uses: actions/setup-node@v4
-    with: {node-version: '18'}
-  - run: npm install -g cordova
-  - run: cordova platform add android
-  - run: cordova build android
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v4
+
+    - name: Setup Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+
+    - name: Install Cordova
+      run: npm install -g cordova
+
+    - name: Create Cordova Project
+      run: |
+        cordova create app com.funtarget.app FunTarget
+        cp -r www app/
+        cp config.xml app/config.xml
+
+    - name: Build Android APK
+      run: |
+        cd app
+        cordova platform add android
+        cordova build android --debug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: FunTarget-Debug-APK
+        path: app/platforms/android/app/build/outputs/apk/debug/app-debug.apk
