--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,37 +10,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Setup Java
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    - name: Setup Node
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
-    - name: Install Cordova
-      run: npm install -g cordova
+      - name: Install Cordova
+        run: npm install -g cordova
 
-    - name: Create Cordova Project
-      run: |
-        cordova create app com.funtarget.app FunTarget
-        cp -r www app/
-        cp config.xml app/config.xml
+      - name: Add Android Platform
+        run: |
+          cordova platform remove android || true
+          cordova platform add android
 
-    - name: Build Android APK
-      run: |
-        cd app
-        cordova platform add android
-        cordova build android --debug
+      - name: Build Debug APK
+        run: cordova build android --debug
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: FunTarget-Debug-APK
-        path: app/platforms/android/app/build/outputs/apk/debug/app-debug.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: FunTarget-Debug-APK
+          path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
